--- a/WDB 2.0/Museum of candy/index.html
+++ b/WDB 2.0/Museum of candy/index.html
@@ -13,14 +13,111 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
     <link rel="stylesheet" href="assets/css/style.css">
     <link rel="stylesheet" href="app.css">
-    <title>Title</title>
+    <title>Museum Of Candy</title>
 </head>
 
 <body>
-
+    <nav id="mainNavbar" class="navbar navbar-dark navbar-expand-md py-0 fixed-top">
+        <a href="" class="navbar-brand">CANDY</a>
+        <button class="navbar-toggler" data-toggle="collapse" data-target="#navLinks" aria-label="Toggle Navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navLinks">
+            <div class="navbar-nav">
+                <a href="" class="nav-link">HOME</a>
+                <a href="" class="nav-link">ABOUT</a>
+                <a href="" class="nav-link">TICKETS</a>
+            </div>
+        </div>
+    </nav>
+    <section class="container-fluid px-0">
+        <div class="row align-items-center">
+            <div class="col-lg-6">
+                <div id="headerGroup" class="text-white text-center d-none d-lg-block mt-5">
+                    <h1>MUSUEM<span>/</span>OF<span>/</span>CANDY</h1>
+                    <h1>MUSUEM<span>/</span>OF<span>/</span>CANDY</h1>
+                    <h1>MUSUEM<span>/</span>OF<span>/</span>CANDY</h1>
+                    <h1>MUSUEM<span>/</span>OF<span>/</span>CANDY</h1>
+                    <h1>MUSUEM<span>/</span>OF<span>/</span>CANDY</h1>
+                    <h1>MUSUEM<span>/</span>OF<span>/</span>CANDY</h1>
+                    <h1>MUSUEM<span>/</span>OF<span>/</span>CANDY</h1>
+                </div>
+            </div>
+            <div class="col-lg-6">
+                <img class="img-fluid" src=" imgs/hand2.png" alt="">
+            </div>
+        </div>
+    </section>
+    <section class="container-fluid px-0 ">
+        <div class="row align-items-center content">
+            <div class="col-md-6 order-2 order-md-1">
+                <img class="img-fluid" src="imgs/milk.png" alt="">
+            </div>
+            <div class="col-md-6 text-center order-1 order-md-2">
+                <div class="row justify-content-center">
+                    <div class="col-10 col-lg-8 blurb mb-5 mb-md-0">
+                        <h2>MUSUEM OF CANDY</h2>
+                        <img src="imgs/lolli_icon.png" alt="" class="d-none d-lg-inline">
+                        <p class="lead">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Laborum, laudantium
+                            eveniet eos saepe quaerat qui sapiente nostrum ex distinctio ut ipsam tempora id non rerum
+                            doloremque quod. Dicta, consectetur commodi.
+                            Totam, animi pariatur earum doloribus necessitatibus eius dignissimos libero deleniti, rerum
+                            porro facilis minima consequuntur quas tempora architecto nesciunt? Explicabo sed possimus
+                            ab deserunt nostrum fugit numquam iusto ad ipsa.</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="row align-items-center content">
+            <div class="col-md-6 text-center">
+                <div class="row justify-content-center">
+                    <div class="col-10 col-lg-8 blurb mb-5 mb-md-0">
+                        <h2>MUSUEM OF CANDY</h2>
+                        <img src="imgs/lolli_icon.png" alt="" class="d-none d-lg-inline">
+                        <p class="lead">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Laborum, laudantium
+                            eveniet eos saepe quaerat qui sapiente nostrum ex distinctio ut ipsam tempora id non rerum
+                            doloremque quod. Dicta, consectetur commodi.
+                            Totam, animi pariatur earum doloribus necessitatibus eius dignissimos libero deleniti, rerum
+                            porro facilis minima consequuntur quas tempora architecto nesciunt? Explicabo sed possimus
+                            ab deserunt nostrum fugit numquam iusto ad ipsa.</p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-6">
+                <img class="img-fluid" src="imgs/gumball.png" alt="">
+            </div>
+        </div>
+        <div class="row align-items-center content">
+            <div class="col-md-6 order-2 order-md-1">
+                <img class="img-fluid" src="imgs/sprinkles.png" alt="">
+            </div>
+            <div class="col-md-6 text-center order-1 order-md-2">
+                <div class="row justify-content-center">
+                    <div class="col-10 col-lg-8 blurb mb-5 mb-md-0">
+                        <h2>MUSUEM OF CANDY</h2>
+                        <img src="imgs/lolli_icon.png" alt="" class="d-none d-lg-inline">
+                        <p class="lead">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Laborum, laudantium
+                            eveniet eos saepe quaerat qui sapiente nostrum ex distinctio ut ipsam tempora id non rerum
+                            doloremque quod. Dicta, consectetur commodi.
+                            Totam, animi pariatur earum doloribus necessitatibus eius dignissimos libero deleniti, rerum
+                            porro facilis minima consequuntur quas tempora architecto nesciunt? Explicabo sed possimus
+                            ab deserunt nostrum fugit numquam iusto ad ipsa.</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.slim.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.1/umd/popper.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.6.0/js/bootstrap.min.js"></script>
+    <script>
+        $(function () {
+            $(document).scroll(function () {
+                var $nav = $("#mainNavbar");
+                $nav.toggleClass("scrolled", $(this).scrollTop() > $nav.height());
+            });
+        });
+    </script>
 </body>
 
 </html>
